--- a/res/nifskope.qrc
+++ b/res/nifskope.qrc
@@ -9,10 +9,12 @@
         <file alias="flag">icon/img_flag.png</file>
         <file alias="havok_logo">img/havok_logo.png</file>
         <file alias="qhull_logo">img/qhull_cone.gif</file>
+    </qresource>
+    <qresource prefix="/wnd">
         <file>icon/handle.png</file>
-        <file alias="collapse">icon/collapse.png</file>
-        <file alias="expand">icon/expand.png</file>
         <file alias="sizeGrip">icon/sizegrip.png</file>
+        <file alias="close">icon/close.png</file>
+        <file alias="undock">icon/undock.png</file>
     </qresource>
     <qresource prefix="/btn">
         <file alias="viewWalk">icon/button_view_walk.png</file>
@@ -30,9 +32,8 @@
         <file alias="screenshot">icon/screenshot.png</file>
         <file alias="save">icon/save.png</file>
         <file alias="load">icon/load.png</file>
-        <file alias="saveView2">icon/save-view2.png</file>
-        <file alias="loadView2">icon/load-view2.png</file>
-        <file alias="loadDark">icon/load-dark.png</file>
+        <file alias="saveView">icon/save-view.png</file>
+        <file alias="loadView">icon/load-view.png</file>
         <file alias="bulb">icon/bulb.png</file>
         <file alias="bulbOff">icon/bulb-off.png</file>
         <file alias="textures">icon/textures.png</file>
@@ -58,5 +59,7 @@
         <file alias="selectObject">icon/select-object.png</file>
         <file alias="selectVerts">icon/select-verts.png</file>
         <file alias="skinned">icon/skinned.png</file>
+        <file alias="collapse">icon/collapse.png</file>
+        <file alias="expand">icon/expand.png</file>
     </qresource>
 </RCC>
