--- a/src/ui/nifskope.ui
+++ b/src/ui/nifskope.ui
@@ -34,11 +34,6 @@
      <height>24</height>
     </size>
    </property>
-   <property name="font">
-    <font>
-     <pointsize>10</pointsize>
-    </font>
-   </property>
    <property name="autoFillBackground">
     <bool>false</bool>
    </property>
@@ -47,12 +42,8 @@
 padding: 0 0 0 0;
 margin: 0 0 0 0;
 border: 0px solid transparent;
-/*background: transparent;
-color: #0099ff;
-background: #0099ff;
-color: white;*/
 color: white;
-background: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 rgba(67, 67, 67, 255), stop:0.039823 rgba(85, 85, 85, 255), stop:0.103245 rgba(102, 102, 102, 255), stop:0.171091 rgba(106, 106, 106, 255));
+background: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 rgba(33, 33, 33, 128), stop:0.039823 rgba(42, 42, 42, 128), stop:0.103245 rgba(50, 50, 50, 128), stop:0.171091 rgba(53, 53, 53, 128));
 }
 
 #statusbar QProgressBar {
@@ -132,8 +123,8 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
    </property>
    <property name="iconSize">
     <size>
-     <width>18</width>
-     <height>18</height>
+     <width>36</width>
+     <height>36</height>
     </size>
    </property>
    <property name="floatable">
@@ -157,8 +148,8 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
    </property>
    <property name="iconSize">
     <size>
-     <width>18</width>
-     <height>18</height>
+     <width>36</width>
+     <height>36</height>
     </size>
    </property>
    <attribute name="toolBarArea">
@@ -198,6 +189,12 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
    <property name="allowedAreas">
     <set>Qt::BottomToolBarArea|Qt::TopToolBarArea</set>
    </property>
+   <property name="iconSize">
+    <size>
+     <width>36</width>
+     <height>36</height>
+    </size>
+   </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
    </attribute>
@@ -223,8 +220,8 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
    </property>
    <property name="iconSize">
     <size>
-     <width>18</width>
-     <height>18</height>
+     <width>36</width>
+     <height>36</height>
     </size>
    </property>
    <attribute name="toolBarArea">
@@ -434,7 +431,18 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
     <property name="title">
      <string>Options</string>
     </property>
+    <widget class="QMenu" name="mTheme">
+     <property name="title">
+      <string>Theme</string>
+     </property>
+     <addaction name="aTheme_2_0_Dark"/>
+     <addaction name="aTheme_2_0_Light"/>
+     <addaction name="aThemeWindows"/>
+     <addaction name="aThemeWindowsXP"/>
+    </widget>
     <addaction name="aSettings"/>
+    <addaction name="separator"/>
+    <addaction name="mTheme"/>
     <addaction name="aSelectFont"/>
    </widget>
    <addaction name="mFile"/>
@@ -500,10 +508,7 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
         </sizepolicy>
        </property>
        <property name="frameShape">
-        <enum>QFrame::StyledPanel</enum>
-       </property>
-       <property name="frameShadow">
-        <enum>QFrame::Raised</enum>
+        <enum>QFrame::NoFrame</enum>
        </property>
        <layout class="QHBoxLayout" name="listButtonFrameLayout">
         <property name="leftMargin">
@@ -740,7 +745,7 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
         <bool>true</bool>
        </property>
        <property name="uniformRowHeights">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
       </widget>
      </item>
@@ -911,12 +916,6 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
      </property>
      <item>
       <widget class="QFrame" name="bsaTitleBar">
-       <property name="frameShape">
-        <enum>QFrame::StyledPanel</enum>
-       </property>
-       <property name="frameShadow">
-        <enum>QFrame::Raised</enum>
-       </property>
        <layout class="QHBoxLayout" name="horizontalLayout_3">
         <property name="spacing">
          <number>6</number>
@@ -967,12 +966,6 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
      </item>
      <item>
       <widget class="QFrame" name="frame">
-       <property name="frameShape">
-        <enum>QFrame::StyledPanel</enum>
-       </property>
-       <property name="frameShadow">
-        <enum>QFrame::Raised</enum>
-       </property>
        <layout class="QHBoxLayout" name="horizontalLayout_2">
         <property name="spacing">
          <number>3</number>
@@ -1742,10 +1735,10 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
      <normalon>:/btn/bulb</normalon>:/btn/bulbOff</iconset>
    </property>
    <property name="text">
-    <string>Lighting</string>
+    <string>  Do Lighting</string>
    </property>
    <property name="toolTip">
-    <string>Lighting</string>
+    <string>Do Lighting</string>
    </property>
    <property name="statusTip">
     <string>Turn Lighting On/Off</string>
@@ -2044,6 +2037,38 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
    </property>
    <property name="statusTip">
     <string>Do Skinning</string>
+   </property>
+  </action>
+  <action name="aTheme_2_0_Dark">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>2.0 Dark</string>
+   </property>
+  </action>
+  <action name="aThemeWindows">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Windows</string>
+   </property>
+  </action>
+  <action name="aThemeWindowsXP">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Windows XP</string>
+   </property>
+  </action>
+  <action name="aTheme_2_0_Light">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>2.0 Light</string>
    </property>
   </action>
  </widget>
