[Imp/Ex] Slight cleanup, expanded support
Re-enable the Import menu but only conditionally based on NIF version.  For unsupported NIF versions either or both of the Import/Export menus will disable.

Fixed MTL file writing for Export for Skyrim and later.

Changed uses of == NiNode to inherits NiNode to correctly support BSFadeNode.

Automatically run Update Tangent Spaces on OBJ Import.

--- a/src/ui/nifskope.ui
+++ b/src/ui/nifskope.ui
@@ -288,7 +288,7 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
     </property>
     <widget class="QMenu" name="menuImport">
      <property name="enabled">
-      <bool>false</bool>
+      <bool>true</bool>
      </property>
      <property name="title">
       <string>Import</string>
