[UI] Filter added archives, correct modifyPane behavior
Add archives from the file dialog only if they contain a textures or materials folder, the same as done with the Auto Detect button.

Fixed some modifyPane behavior for Resources.  Disallowed manual editing of list items in Archives, but maintained it in Paths.

--- a/src/ui/settingsresources.ui
+++ b/src/ui/settingsresources.ui
@@ -178,7 +178,11 @@ Game Paths</string>
            <number>0</number>
           </property>
           <item>
-           <widget class="QListView" name="archivesList"/>
+           <widget class="QListView" name="archivesList">
+            <property name="editTriggers">
+             <set>QAbstractItemView::NoEditTriggers</set>
+            </property>
+           </widget>
           </item>
           <item alignment="Qt::AlignTop">
            <widget class="QFrame" name="frame_4">
