--- a/src/ui/nifskope.ui
+++ b/src/ui/nifskope.ui
@@ -7,101 +7,10 @@
     <x>0</x>
     <y>0</y>
     <width>1280</width>
-    <height>960</height>
+    <height>800</height>
    </rect>
   </property>
-  <widget class="QWidget" name="centralwidget">
-   <property name="enabled">
-    <bool>false</bool>
-   </property>
-  </widget>
-  <widget class="QStatusBar" name="statusbar">
-   <property name="sizePolicy">
-    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-     <horstretch>0</horstretch>
-     <verstretch>0</verstretch>
-    </sizepolicy>
-   </property>
-   <property name="minimumSize">
-    <size>
-     <width>0</width>
-     <height>24</height>
-    </size>
-   </property>
-   <property name="maximumSize">
-    <size>
-     <width>16777215</width>
-     <height>24</height>
-    </size>
-   </property>
-   <property name="autoFillBackground">
-    <bool>false</bool>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">#statusbar {
-padding: 0 0 0 0;
-margin: 0 0 0 0;
-border: 0px solid transparent;
-color: white;
-background: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 rgba(33, 33, 33, 128), stop:0.039823 rgba(42, 42, 42, 128), stop:0.103245 rgba(50, 50, 50, 128), stop:0.171091 rgba(53, 53, 53, 128));
-}
-
-#statusbar QProgressBar {
-margin: 0px;
-padding: 0px;
-border: 0px solid transparent;
-text-align: center;
-color: white;
-font: 12px normal &quot;Segoe UI&quot;;
-background: transparent;
-}
-
-QProgressBar::chunk {
-background-color: #05B8CC;
-width: 20px;
-}
-
-QProgressBar::text {
-padding-bottom: 2px;
-margin-top: -2px;
-}
-
-#statusbar QSizeGrip {
-background: url(&quot;:/img/sizeGrip&quot;) no-repeat;
-width: 10px; height: 10px;
-}
-
-#statusbar::text {
-padding: 0 0 10px 0;
-margin: -3px 0 0 0;
-
-}
-
-#statusbar::item {
-border: 0px solid transparent;
-}
-#statusbar #filepathStatusbarWidget QLabel {
-/*color: #333333;*/
-color: white;
-padding: 0 0 1px 0;
-margin: -1px 0 0 0;
-font: 12px normal &quot;Segoe UI&quot;;
-}
-
-#statusbar QPushButton {
-padding: 0px; border: none; margin: 0px;
-}
-
-#statusbar #filepathStatusbarWidget QPushButton:pressed {
-margin-top: 1px; margin-left: 1px;
-background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0.5, stop:0.139963 rgba(255, 255, 255, 255), stop:1 rgba(255, 255, 255, 0));
-}
-
-#statusbar #filepathStatusbarWidget QPushButton:hover {
-background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0.5, stop:0.139963 rgba(255, 255, 255, 255), stop:1 rgba(255, 255, 255, 0));
-}</string>
-   </property>
-  </widget>
+  <widget class="QWidget" name="centralwidget" />
   <widget class="QToolBar" name="tFile">
    <property name="sizePolicy">
     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -182,32 +91,6 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
    <addaction name="aShowMarkers"/>
    <addaction name="aShowHidden"/>
   </widget>
-  <widget class="QToolBar" name="tView">
-   <property name="windowTitle">
-    <string>View</string>
-   </property>
-   <property name="allowedAreas">
-    <set>Qt::BottomToolBarArea|Qt::TopToolBarArea</set>
-   </property>
-   <property name="iconSize">
-    <size>
-     <width>36</width>
-     <height>36</height>
-    </size>
-   </property>
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
-   <addaction name="aToggleBlockList"/>
-   <addaction name="aToggleBlockDetails"/>
-   <addaction name="aToggleHeader"/>
-   <addaction name="aToggleInspect"/>
-   <addaction name="aToggleKfm"/>
-   <addaction name="aToggleHelp"/>
-  </widget>
   <widget class="QToolBar" name="tAnim">
    <property name="enabled">
     <bool>false</bool>
@@ -233,6 +116,32 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
    <addaction name="aAnimPlay"/>
    <addaction name="aAnimLoop"/>
    <addaction name="aAnimSwitch"/>
+  </widget>
+  <widget class="QToolBar" name="tView">
+   <property name="windowTitle">
+    <string>View</string>
+   </property>
+   <property name="allowedAreas">
+    <set>Qt::BottomToolBarArea|Qt::TopToolBarArea</set>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>36</width>
+     <height>36</height>
+    </size>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="aToggleBlockList"/>
+   <addaction name="aToggleBlockDetails"/>
+   <addaction name="aToggleHeader"/>
+   <addaction name="aToggleInspect"/>
+   <addaction name="aToggleKfm"/>
+   <addaction name="aToggleHelp"/>
   </widget>
   <widget class="QToolBar" name="tLOD">
    <property name="sizePolicy">
@@ -450,6 +359,93 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
    <addaction name="mRender"/>
    <addaction name="mOptions"/>
    <addaction name="mHelp"/>
+  </widget>
+  <widget class="QStatusBar" name="statusbar">
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>0</width>
+     <height>24</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>16777215</width>
+     <height>24</height>
+    </size>
+   </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">#statusbar {
+padding: 0 0 0 0;
+margin: 0 0 0 0;
+border: 0px solid transparent;
+color: white;
+background: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 rgba(33, 33, 33, 128), stop:0.039823 rgba(42, 42, 42, 128), stop:0.103245 rgba(50, 50, 50, 128), stop:0.171091 rgba(53, 53, 53, 128));
+}
+
+#statusbar QProgressBar {
+margin: 0px;
+padding: 0px;
+border: 0px solid transparent;
+text-align: center;
+color: white;
+font: 12px normal &quot;Segoe UI&quot;;
+background: transparent;
+}
+
+QProgressBar::chunk {
+background-color: #05B8CC;
+width: 20px;
+}
+
+QProgressBar::text {
+padding-bottom: 2px;
+margin-top: -2px;
+}
+
+#statusbar QSizeGrip {
+background: url(&quot;:/img/sizeGrip&quot;) no-repeat;
+width: 10px; height: 10px;
+}
+
+#statusbar::text {
+padding: 0 0 10px 0;
+margin: -3px 0 0 0;
+
+}
+
+#statusbar::item {
+border: 0px solid transparent;
+}
+#statusbar #filepathStatusbarWidget QLabel {
+/*color: #333333;*/
+color: white;
+padding: 0 0 1px 0;
+margin: -1px 0 0 0;
+font: 12px normal &quot;Segoe UI&quot;;
+}
+
+#statusbar QPushButton {
+padding: 0px; border: none; margin: 0px;
+}
+
+#statusbar #filepathStatusbarWidget QPushButton:pressed {
+margin-top: 1px; margin-left: 1px;
+background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0.5, stop:0.139963 rgba(255, 255, 255, 255), stop:1 rgba(255, 255, 255, 0));
+}
+
+#statusbar #filepathStatusbarWidget QPushButton:hover {
+background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0.5, stop:0.139963 rgba(255, 255, 255, 255), stop:1 rgba(255, 255, 255, 0));
+}</string>
+   </property>
   </widget>
   <widget class="QDockWidget" name="InspectDock">
    <property name="enabled">
