--- a/src/ui/nifskope.ui
+++ b/src/ui/nifskope.ui
@@ -2079,6 +2079,20 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
     <string>https://discord.gg/ZFjdN4x</string>
    </property>
   </action>
+  <action name="aErrorColor">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Error Color</string>
+   </property>
+   <property name="toolTip">
+    <string>Error Color</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
