[UI] Improved file checker
Renamed XML Checker to File Checker since apparently nobody realizes the window even exists.

Added basic value checking.  Currently arrays are not traversable except for the first item of the array.  Compounds can be descended through the slash syntax used elsewhere in the program.

Added a few basic error checkers that run on Sanitize as well as during file checking.  They were only done upon user request so they are not very thorough.

Files that error during header read no longer fail silently.  Also added an option to only read the header and the BSStream version is now printed with the filename.

--- a/src/ui/nifskope.ui
+++ b/src/ui/nifskope.ui
@@ -239,8 +239,8 @@
     <addaction name="menuImport"/>
     <addaction name="menuExport"/>
     <addaction name="separator"/>
-    <addaction name="aLoadXML"/>
     <addaction name="aShredder"/>
+    <addaction name="aLoadXML"/>
     <addaction name="separator"/>
     <addaction name="aQuit"/>
    </widget>
@@ -1055,7 +1055,7 @@ background: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0
   </action>
   <action name="aShredder">
    <property name="text">
-    <string>XML Checker</string>
+    <string>File Checker</string>
    </property>
   </action>
   <action name="aQuit">
