[UI] Add Other Games fallback search
Also, move alternative file extensions checkbox to main Games tab.

Other Games fallback search will look a final time in all listed resources in Other Games if no file is found for the game's own resources.

--- a/src/ui/settingsresources.ui
+++ b/src/ui/settingsresources.ui
@@ -833,6 +833,20 @@
              </property>
             </widget>
            </item>
+           <item>
+            <widget class="QCheckBox" name="chkAlternateExt">
+             <property name="text">
+              <string>Search alternative file extensions (TGA, PNG)</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QCheckBox" name="chkOtherGamesFallback">
+             <property name="text">
+              <string>Search Other Games if no match</string>
+             </property>
+            </widget>
+           </item>
           </layout>
          </widget>
         </widget>
@@ -985,13 +999,6 @@ Game Paths</string>
            </widget>
           </item>
          </layout>
-        </widget>
-       </item>
-       <item>
-        <widget class="QCheckBox" name="chkAlternateExt">
-         <property name="text">
-          <string>Load alternate file extensions</string>
-         </property>
         </widget>
        </item>
       </layout>
